--- a/.github/workflows/remoteVersioning2.yml
+++ b/.github/workflows/remoteVersioning2.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Determine Default dry-run
         id: determine-run
         run: |
-          if [[ "${{ ((github.head_ref == 'release/dev') && (github.event.action == 'opened')) || ((github.head_ref != 'release/dev') && (github.event.pull_request.merged == true)) }}" ]]; then
+          if "${{ ((github.head_ref == 'release/dev') && (github.event.action == 'opened')) || ((github.head_ref != 'release/dev') && (github.event.pull_request.merged == true)) }}"; then
             echo "DEFAULT_RUN=false" >> "$GITHUB_ENV"
           else
             echo "DEFAULT_RUN=true" >> "$GITHUB_ENV"
@@ -49,7 +49,7 @@ jobs:
       - name: Determine default tag to use
         id: determine-tag
         run: |
-          if [[ "${{ (github.head_ref == 'release/dev' && github.event.action == 'synchronize') }}" ]]; then
+          if "${{ (github.head_ref == 'release/dev' && github.event.action == 'synchronize') }}"; then
             echo "DEFAULT_TAG=${{ steps.create-tag.outputs.previous_tag }}" >> "$GITHUB_ENV"
           else
             echo "DEFAULT_TAG=${{ steps.create-tag.outputs.new_tag }}" >> "$GITHUB_ENV"
