--- a/renovate.json
+++ b/renovate.json
@@ -3,44 +3,33 @@
   "extends": [
     "config:base"
   ],
-  "ignoreUnstable": false,
   "enabledManagers": ["regex"],
-  "branchPrefix": ["release/"],
-  "prBodyTemplate": "{{{table}}}{{{notes}}}{{{changelogs}}}{{{footer}}}",
-  "labels": ["pre-release"],
-  "packageRules": [
-    {
-      "description": "group depends",
-      "matchPaths": ["*"],
-      "groupName": "dev",
-      "separateMajorMinor": "false"
-    }
-  ],
 
   "regexManagers": [
     {
       "description": "Update HCL Plugins",
       "fileMatch": [".hcl$"],
       "matchStrings": [
-        "name\\s*=\\s\"anothertool\"\\n\\s*enabled\\s*=\\s\"true\"\\n\\s*revision\\s=\\s\"(?<currentValue>.*)\""
+        "revision =\\s\"(?<currentValue>.*\\d)"
       ],
       "datasourceTemplate": "github-releases",
-      "packageNameTemplate": "TOwens1987/anothertool",
-      "depNameTemplate": "dev",
+      "packageNameTemplate": "TOwens1987/GitVersioning",
+      "depNameTemplate": "GitVersioning Update",
       "extractVersionTemplate": "^(?<version>.*)$",
       "versioningTemplate": "semver"
     },
     {
-      "description": "Update HCL Plugins",
-      "fileMatch": [".hcl$"],
+      "description": "Update chart Plugins",
+      "fileMatch": ["chart.yaml$"],
       "matchStrings": [
-        "name\\s*=\\s\"testtool\"\\n\\s*enabled\\s*=\\s\"true\"\\n\\s*revision\\s=\\s\"(?<currentValue>.*)\""
+        "\\s*test123:\\s*(?<currentValue>[^\\n]*)"
       ],
-      "datasourceTemplate": "github-releases",
-      "packageNameTemplate": "TOwens1987/testtool",
-      "depNameTemplate": "dev",
-      "extractVersionTemplate": "^(?<version>.*)$",
-      "versioningTemplate": "semver"
+      "datasourceTemplate": "helm",
+      "packageNameTemplate": "https://github.com/TOwens1987/GitVersioning/blob/main/chart.yaml",
+      "depNameTemplate": "https://github.com/TOwens1987/GitVersioning/blob/main/chart.yaml",
+      "extractVersionTemplate": "\\s*appVersion:\\s*(?<currentValue>[^\\n]*)",
+      "versioningTemplate": "semver",
+
     }
   ]
 }
