--- a/renovate.json
+++ b/renovate.json
@@ -24,7 +24,7 @@
       "matchStrings": [
         "\\s*test123:\\s*(?<currentValue>[^\\n]*)"
       ],
-      "datasourceTemplate": "helm",
+      "datasourceTemplate": "github-release-attachments",
       "packageNameTemplate": "https://github.com/TOwens1987/GitVersioning/blob/main/chart.yaml",
       "depNameTemplate": "https://github.com/TOwens1987/GitVersioning/blob/main/chart.yaml",
       "extractVersionTemplate": "\\s*appVersion:\\s*(?<currentValue>[^\\n]*)",
