--- a/renovate.json
+++ b/renovate.json
@@ -18,18 +18,31 @@
       "extractVersionTemplate": "^(?<version>.*)$",
       "versioningTemplate": "semver"
     },
+  ],
+
+  "customDatasources": {
+    "tool_generic": {
+      "defaultRegistryUrlTemplate": "https://raw.githubusercontent.com/TOwens1987/GitVersioning/main/chart.yaml",
+      "transformTemplates": [
+        "{ \"releases\": $map($, function($v) { { \"version\": $v.appVersion, \"sourceUrl\": $v.filelink } }) }"
+      ]
+    }
+  },
+
+  "customManagers": [
     {
-      "description": "Update chart Plugins",
-      "fileMatch": ["chart.yaml$"],
+      "customType": "regex",
+      "fileMatch": ["chart.yml$"],
+      "datasourceTemplate": "custom.tool_generic",
       "matchStrings": [
         "\\s*test123:\\s*(?<currentValue>[^\\n]*)"
       ],
-      "datasourceTemplate": "github-release-attachments",
-      "packageNameTemplate": "https://github.com/TOwens1987/GitVersioning/blob/main/chart.yaml",
-      "depNameTemplate": "https://github.com/TOwens1987/GitVersioning/blob/main/chart.yaml",
-      "extractVersionTemplate": "\\s*appVersion:\\s*(?<currentValue>[^\\n]*)",
-      "versioningTemplate": "semver",
-
+      "versioningTemplate": "{{#if versioning}}{{{versioning}}}{{else}}semver{{/if}}"
     }
   ]
+
+
+}
+
+
 }
