fix syntax, try 2

--- a/renovate.json
+++ b/renovate.json
@@ -37,6 +37,7 @@
       "matchStrings": [
         "\\s*test123:\\s*(?<currentValue>[^\\n]*)"
       ],
+      "depNameTemplate": "Chart Update",
       "versioningTemplate": "{{#if versioning}}{{{versioning}}}{{else}}semver{{/if}}"
     }
   ]
