fix syntax, try 4

--- a/renovate.json
+++ b/renovate.json
@@ -22,7 +22,7 @@
 
   "customDatasources": {
     "tool_generic": {
-      "defaultRegistryUrlTemplate": "https://raw.githubusercontent.com/TOwens1987/GitVersioning/main/chart.yaml",
+      "defaultRegistryUrlTemplate": "https://raw.githubusercontent.com/TOwens1987/GitVersioning/main/{{packageName}}",
       "transformTemplates": [
         "{ \"releases\": $map($, function($v) { { \"version\": $v.appVersion, \"sourceUrl\": $v.filelink } }) }"
       ]
