fix syntax, try 7

--- a/renovate.json
+++ b/renovate.json
@@ -25,7 +25,7 @@
       "defaultRegistryUrlTemplate": "https://raw.githubusercontent.com/TOwens1987/GitVersioning/main/{{packageName}}",
       "format": "plain",
       "transformTemplates": [
-        "{ \"releases\": $map($, function($v) { { \"version\": $v.appVersion, \"sourceUrl\": $v.filelink } }) }"
+        "{ \"releases\": $map($, function($v) { { \"version\": $v.Version, } }) }"
       ]
     }
   },
