--- a/renovate.json
+++ b/renovate.json
@@ -25,7 +25,7 @@
       "defaultRegistryUrlTemplate": "https://raw.githubusercontent.com/TOwens1987/GitVersioning/main/chart.yaml",
       "format": "plain",
       "transformTemplates": [
-        "{ \"releases\": $map($, function($v) { { \"version\": $v.Version, } }) }"
+        "{ \"releases\": $map($, function($v) { { \"apiVersion\": $v.Version, } }) }"
       ]
     }
   },
