--- a/renovate.json
+++ b/renovate.json
@@ -25,7 +25,7 @@
       "defaultRegistryUrlTemplate": "https://raw.githubusercontent.com/TOwens1987/GitVersioning/main/chart.yaml",
       "format": "plain",
       "transformTemplates": [
-        "\"releases\": $filter($, function($v, $i, $a) { $v.version ~= /^appVersion/ })"
+        "$[$.version ~= /^appVersion: \\d+(\\.\\d+)*$/]"
       ]
     }
   },
