--- a/renovate.json
+++ b/renovate.json
@@ -39,7 +39,7 @@
         "\\s*test123:\\s*(?<currentValue>[^\\n]*)"
       ],
       "depNameTemplate": "app version",
-      "packageNameTemplate": "appVersion: \\d+(\\.\\d+)*$/",
+      "packageNameTemplate": "https://raw.githubusercontent.com/TOwens1987/GitVersioning/main/chart.yaml",
       "versioningTemplate": "{{#if versioning}}{{{versioning}}}{{else}}semver{{/if}}"
     }
   ]
