--- a/renovate.json
+++ b/renovate.json
@@ -25,7 +25,7 @@
       "defaultRegistryUrlTemplate": "https://raw.githubusercontent.com/TOwens1987/GitVersioning/main/chart.yaml",
       "format": "plain",
       "transformTemplates": [
-        "$[$.version ~= /^appVersion: \\d+(\\.\\d+)*$/]"
+        "releases[$contains(version, /^appVersion:/)]"
       ]
     }
   },
