--- a/renovate.json
+++ b/renovate.json
@@ -25,7 +25,7 @@
       "defaultRegistryUrlTemplate": "https://raw.githubusercontent.com/TOwens1987/GitVersioning/main/chart.yaml",
       "format": "plain",
       "transformTemplates": [
-        "$map(releases[$contains(version, /^appVersion:/)], function($v) {\n  $substring($v.version, 12)\n})"
+        "$map(releases[$contains(version, /^appversion:/)], function($v) {\n  $substring($v.version, 12)\n})"
       ]
     }
   },
