--- a/renovate.json
+++ b/renovate.json
@@ -36,7 +36,7 @@
       "fileMatch": ["chart.yaml$"],
       "datasourceTemplate": "custom.tool_generic",
       "matchStrings": [
-        "\\s*test123:\\s*(?<currentValue>[^\\n]*)(?:\\s+versioning=(?&currentValue))?"
+        "\\s*test123:\\s*(?<currentValue>[^\\n]*)"
       ],
       "depNameTemplate": "app version",
       "packageNameTemplate": "https://raw.githubusercontent.com/TOwens1987/GitVersioning/main/chart.yaml",
