--- a/renovate.json
+++ b/renovate.json
@@ -36,7 +36,7 @@
       "fileMatch": ["chart.yaml$"],
       "datasourceTemplate": "custom.tool_generic",
       "matchStrings": [
-        "\\s*test123:\\s*(?<currentValue>[^\\n]*)"
+        "^(?<depname>\\w+):\\s*(?<currentValue>[^\\n]*)"
       ],
       "versioningTemplate": "{{#if versioning}}{{{versioning}}}{{else}}semver{{/if}}"
     }
