--- a/renovate.json
+++ b/renovate.json
@@ -36,8 +36,9 @@
       "fileMatch": ["chart.yaml$"],
       "datasourceTemplate": "custom.tool_generic",
       "matchStrings": [
-        "^(?<depName>\\w+):\\s*(?<currentValue>[^\\n]*)"
+        "\\s*test123:\\s*(?<currentValue>[^\\n]*)"
       ],
+      "depNameTemplate": "version",
       "versioningTemplate": "{{#if versioning}}{{{versioning}}}{{else}}semver{{/if}}"
     }
   ]
