--- a/renovate.json
+++ b/renovate.json
@@ -37,7 +37,7 @@
       "defaultRegistryUrlTemplate": "https://raw.githubusercontent.com/TOwens1987/GitVersioning/main/chart.yaml",
       "format": "plain",
       "transformTemplates": [
-        "$filter(releases, function($v) {$contains($v.version, /^appversion:/)})"
+        "{\n  \"releases\": [$map(releases[$contains(version, /^appversion:/)], function($v) {{\"version\": $substring($v.version, 12)}})]\n}"
       ]
     }
   }
