--- a/renovate.json
+++ b/renovate.json
@@ -5,6 +5,14 @@
   ],
   "enabledManagers": ["regex"],
 
+
+  "packageRules": [
+    {
+      "matchPackageNames": ["angular"],
+      "allowedVersions": "<=1.5"
+    }
+  ],
+
   "regexManagers": [
     {
       "description": "Update HCL Plugins",
@@ -29,7 +37,7 @@
         "\\s*appVersion:\\s*(?<currentValue>[^\\n]*)"
       ],
       "depNameTemplate": "version",
-      "versioningTemplate": "{{#if versioning}}{{{versioning}}}{{else}}semver{{/if}}"
+      "versioningTemplate": "regex:^appVersion:\\s*(?<major>\\\\d+)\\\\.(?<minor>\\\\d+)\\\\.(?<patch>\\\\d+)\\\\.(?<revision>\\\\d+)$"
     }
   ],
   "customDatasources": {
@@ -37,7 +45,7 @@
       "defaultRegistryUrlTemplate": "https://raw.githubusercontent.com/TOwens1987/GitVersioning/main/chart.yaml",
       "format": "plain",
       "transformTemplates": [
-        "{\"releases\": [$map($filter(releases, function($v) {$contains($v.version, /^appversion:/)}), function($v) {$v})]}"
+        "{\"releases\": [$map($filter(releases, function($v) {$contains($v.version, /^appVersion:/)}), function($v) {$v})]}"
       ]
     }
   }
