--- a/renovate.json
+++ b/renovate.json
@@ -37,7 +37,8 @@
         "\\s*appVersion:\\s*(?<currentValue>[^\\n]*)"
       ],
       "depNameTemplate": "version",
-      "versioningTemplate": "regex:^appVersion:\\s*(?<major>\\\\d+)\\\\.(?<minor>\\\\d+)\\\\.(?<patch>\\\\d+)\\\\.(?<revision>\\\\d+)$"
+      "packageNameTemplate": "version",
+      "versioningTemplate": "regex:^(?<major>\\\\d+)\\\\.(?<minor>\\\\d+)\\\\.(?<patch>\\\\d+)\\\\.(?<revision>\\\\d+)$"
     }
   ],
   "customDatasources": {
