--- a/renovate.json
+++ b/renovate.json
@@ -38,7 +38,7 @@
       ],
       "depNameTemplate": "version",
       "packageNameTemplate": "version",
-      "versioningTemplate": "{{#if versioning}}{{{versioning}}}{{else}}semver{{/if}}"
+      "versioningTemplate": "regex:^(?<major>\\\\d+)\\\\.(?<minor>\\\\d+)\\\\.(?<patch>\\\\d+)\\\\.(?<revision>\\\\d+)$"
     }
   ],
   "customDatasources": {
