appVersion syntax change, try 12

--- a/renovate.json
+++ b/renovate.json
@@ -38,7 +38,7 @@
       ],
       "depNameTemplate": "version",
       "packageNameTemplate": "version",
-      "extractVersionTemplate": "^(?<version>.*)$"
+      "extractVersionTemplate": "appVersion:\\s*(\\d+(\\.\\d+)*)"
     }
   ],
   "customDatasources": {
