appVersion syntax change, try 13

--- a/renovate.json
+++ b/renovate.json
@@ -36,8 +36,8 @@
       "matchStrings": [
         "\\s*appVersion:\\s*(?<currentValue>[^\\n]*)"
       ],
-      "depNameTemplate": "version",
-      "packageNameTemplate": "version",
+      "depNameTemplate": "\"version\"",
+      "packageNameTemplate": "\"version\"",
       "extractVersionTemplate": "appVersion:\\s*(\\d+(\\.\\d+)*)"
     }
   ],
