--- a/renovate.json
+++ b/renovate.json
@@ -9,7 +9,7 @@
   "packageRules": [
     {
       "matchPackageNames": ["releases"],
-      "versioning": "regex:\"appVersion\": (\\d+\\.\\d+\\.\\d+)"
+      "versioning": "regex:\"appVersion\": (?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)"
     }
   ],
 
