--- a/renovate.json
+++ b/renovate.json
@@ -8,6 +8,7 @@
 
   "packageRules": [
     {
+      "matchDatasources": "custom.tool-generic",
       "matchPackageNames": ["releases"],
       "versioning": "regex:\"appVersion\": (?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)"
     }
@@ -34,7 +35,7 @@
       "fileMatch": ["chart.yaml$"],
       "datasourceTemplate": "custom.tool-generic",
       "matchStrings": [
-        "(?<currentValue>appVersion: \\d+\\.\\d+\\.\\d+)\n"
+        "(?<currentValue>appVersion: \\d+\\.\\d+\\.\\d+)"
       ],
       "depNameTemplate": "releases",
       "packageNameTemplate": "releases",
