--- a/renovate.json
+++ b/renovate.json
@@ -35,7 +35,7 @@
       "fileMatch": ["chart.yaml$"],
       "datasourceTemplate": "custom.tool-generic",
       "matchStrings": [
-        "(?<currentValue>appVersion: \\d+\\.\\d+\\.\\d+)"
+        "(?<currentValue>appVersion: (?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+))"
       ],
       "depNameTemplate": "releases",
       "packageNameTemplate": "releases",
