testing name,try 2

--- a/renovate.json
+++ b/renovate.json
@@ -38,7 +38,7 @@
         "(?<currentValue>appVersion: (?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+))"
       ],
       "depNameTemplate": "DefaultToolName",
-      "packageNameTemplate": "DefaultToolName",
+      "packageNameTemplate": "releases",
       "extractVersionTemplate": "(?<version>appVersion: (?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+))$"
     }
   ],
