--- a/renovate.json
+++ b/renovate.json
@@ -32,7 +32,7 @@
   "customManagers": [
     {
       "customType": "regex",
-      "fileMatch": ["chart.yaml$"],
+      "fileMatch": ["toolVersions.adoc$"],
       "datasourceTemplate": "custom.tool-generic",
       "matchStrings": [
         "(?<currentValue>appVersion: (?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+))"
