--- a/renovate.json
+++ b/renovate.json
@@ -8,7 +8,7 @@
 
   "packageRules": [
     {
-      "matchDatasources": "custom.tool-generic",
+      "matchDatasources": "custom.tool-{{depName))",
       "matchPackageNames": ["releases"],
       "versioning": "regex:appVersion: (?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)"
     }
