--- a/renovate.json
+++ b/renovate.json
@@ -4,8 +4,13 @@
     "config:base"
   ],
   "enabledManagers": ["regex"],
-
-
+  "hostRules": [
+    {
+      "matchHost": "https://github.com/TOwens1987/testtool",
+      "token": "RenovateToken"
+    }
+  ],
+  
   "packageRules": [
     {
       "matchDatasources": ["custom.tool-GitVersioning", "custom.tool-testtool"],
