--- a/renovate.json
+++ b/renovate.json
@@ -6,8 +6,8 @@
   "enabledManagers": ["regex"],
   "hostRules": [
     {
-      "matchHost": "https://raw.githubusercontent.com/TOwens1987/testtool/main/chart.yaml",
-      "token": "RENOVATE_TOKEN"
+      "matchHost": "https://github.com/TOwens1987/testtool",
+      "token": "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"
     }
   ],
 
