testing multiple prs

--- a/renovate.json
+++ b/renovate.json
@@ -17,6 +17,12 @@
       "matchPackageNames": ["releases"],
       "groupName": "tools",
       "versioning": "regex:appVersion: (?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)"
+    },
+    {
+      "matchDatasources": ["custom.tool-GitVersioning", "custom.tool-testtool"],
+      "matchPackageNames": ["releases"],
+      "groupName": "tools-2",
+      "versioning": "regex:appVersion: (?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)"
     }
   ],
 
