--- a/renovate.json
+++ b/renovate.json
@@ -20,7 +20,7 @@
     },
     {
       "matchDatasources": ["custom.tool-GitVersioning", "custom.tool-testtool"],
-      "matchPackageNames": ["releases"],
+      "matchPackageNames": ["releases-2"],
       "groupName": "tools-2",
       "versioning": "regex:appVersion: (?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)"
     }
