testing multiple prs, try 4

--- a/renovate.json
+++ b/renovate.json
@@ -15,6 +15,7 @@
     {
       "matchDatasources": ["custom.tool-GitVersioning", "custom.tool-testtool"],
       "matchPackageNames": ["releases"],
+      "additionalBranchPrefix": "test-",
       "groupName": "tools",
       "versioning": "regex:appVersion: (?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)"
     },
