--- a/renovate.json
+++ b/renovate.json
@@ -10,7 +10,7 @@
     {
       "matchDatasources": ["custom.tool-GitVersioning", "custom.tool-testtool"],
       "matchPackageNames": ["releases"],
-      "additionalBranchPrefix": "{{baseDir}}-",
+      "additionalBranchPrefix": "tools-1",
       "groupName": "tools",
       "versioning": "regex:appVersion: (?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)"
     },
