--- a/renovate.json
+++ b/renovate.json
@@ -15,7 +15,8 @@
     {
       "matchDatasources": ["custom.tool-GitVersioning", "custom.tool-testtool"],
       "groupName": "tools-2",
-      "versioning": "regex:appVersion: (?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)"
+      "versioning": "regex:appVersion: (?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)",
+      "additionalBranchPrefix": "tools-2"
     }
   ],
 
