--- a/renovate.json
+++ b/renovate.json
@@ -8,14 +8,15 @@
   "packageRules": [
     {
       "matchDatasources": ["custom.tool-GitVersioning", "custom.tool-testtool"],
-      "matchPackageNames": ["ghcr.io/umami-software/umami"],
+      "matchPackageNames": ["releases"],
       "additionalBranchPrefix": "tools-1",
       "versioning": "regex:appVersion: (?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)"
     },
     {
       "matchDatasources": ["custom.tool-GitVersioning", "custom.tool-testtool"],
       "versioning": "regex:appVersion: (?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)",
-      "additionalBranchPrefix": "tools-2"
+      "additionalBranchPrefix": "tools-2",
+      "matchPackageNames": ["releases-2"]
     }
   ],
 
