--- a/renovate.json
+++ b/renovate.json
@@ -21,7 +21,7 @@
     },
     {
       "versioning": "regex:appVersion: (?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)",
-      "additionalBranchSuffix": "tools-3",
+      "additionalBranchPrefix": "tools-3",
       "matchPackageNames": ["releases4"],
       "groupName": "dev"
     },
@@ -29,7 +29,7 @@
     {
       "versioning": "regex:appVersion: (?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)",
       "matchDatasources": ["github-releases"],
-      "additionalBranchSuffix": "tools-4",
+      "additionalBranchPrefix": "tools-4",
       "matchPackageNames": ["releases4"],
       "groupName": "dev-prime"
     }
