--- a/renovate.json
+++ b/renovate.json
@@ -30,7 +30,7 @@
       "versioning": "regex:appVersion: (?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)",
       "matchDatasources": ["github-releases"],
       "additionalBranchPrefix": "tools-4",
-      "matchPackageNames": ["releases4"],
+      "matchPackageNames": ["TOwens1987/<<nameoftool>>"],
       "groupName": "dev-prime"
     }
   ],
@@ -40,10 +40,10 @@
       "description": "Update HCL Plugins",
       "fileMatch": [".hcl$"],
       "matchStrings": [
-        "revision =\\s\"(?<currentValue>.*\\d)"
+        "\\s*(?<nameoftool>.*):\\n\\s*revision:\\s(?<currentValue>.*)"
       ],
       "datasourceTemplate": "github-releases",
-      "packageNameTemplate": "TOwens1987/GitVersioning",
+      "packageNameTemplate": "TOwens1987/<<nameoftool>>",
       "depNameTemplate": "GitVersioning Update",
       "extractVersionTemplate": "^(?<version>.*)$",
       "versioningTemplate": "semver"
