--- a/renovate.json
+++ b/renovate.json
@@ -21,7 +21,7 @@
     },
     {
       "versioning": "regex:appVersion: (?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)",
-      "fileMatch": [".hcl$"],
+      "matchPaths": ["**"],
       "additionalBranchPrefix": "tools-3",
       "groupName": "dev"
     },
