--- a/renovate.json
+++ b/renovate.json
@@ -8,7 +8,7 @@
   "packageRules": [
     {
       "matchDatasources": ["custom.tool-GitVersioning", "custom.tool-testtool"],
-      "matchPackageNames": ["releases4"],
+      "matchPackageNames": ["releases-2"],
       "groupName": "Tools-1",
       "additionalBranchPrefix": "tools-1",
       "versioning": "regex:appVersion: (?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)"
@@ -16,17 +16,10 @@
     {
       "versioning": "regex:appVersion: (?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)",
       "additionalBranchPrefix": "tools-2",
-      "matchPackageNames": ["releases-2"],
+      "matchPackagePatterns": ["^releases"],
       "groupName": "Tools-2"
-    },
-    
-    {
-      "versioning": "regex:appVersion: (?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)",
-      "matchPaths": ["**/terragrunt.hcl"],
-      "additionalBranchPrefix": "tools-4",
-      "matchPackageNames": ["TOwens1987/<<nameoftool>>"],
-      "groupName": "dev-prime"
     }
+
   ],
 
   "regexManagers": [
@@ -65,7 +58,7 @@
       "matchStrings": [
         "\\s*(?<depName>.*)\\n\\s*(?<currentValue>.*)"
       ],
-      "packageNameTemplate": "releases4",
+      "packageNameTemplate": "releases-2",
       "extractVersionTemplate": "(?<version>appVersion: (?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+))$"
     },
        {
