--- a/renovate.json
+++ b/renovate.json
@@ -8,6 +8,7 @@
   "packageRules": [
     {
       "matchDatasources": ["custom.tool-GitVersioning", "custom.tool-testtool"],
+      "matchDepPatterns": ["**"],
       "groupName": "Tools-1",
       "additionalBranchPrefix": "tools-1",
       "versioning": "regex:appVersion: (?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)"
@@ -15,7 +16,7 @@
     {
       "versioning": "regex:appVersion: (?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)",
       "additionalBranchPrefix": "tools-2",
-      "matchPackagePatterns": ["^releases"],
+      "matchPackagePatterns": ["releases"],
       "groupName": "Tools-2"
     }
 
