--- a/renovate.json
+++ b/renovate.json
@@ -56,9 +56,10 @@
       "fileMatch": ["toolVersions.adoc$"],
       "datasourceTemplate": "custom.tool-{{depName}}",
       "matchStrings": [
-        "\\s*(?<depName>.*)\\n\\s*(?<currentValue>.*)"
+        "\\s*(?<nameoftool>.*)\\n\\s*(?<currentValue>.*)"
       ],
       "packageNameTemplate": "releases-2",
+      "depNameTemplate": "<<nameoftool>>",
       "extractVersionTemplate": "(?<version>appVersion: (?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+))$"
     },
        {
@@ -66,9 +67,10 @@
       "fileMatch": ["toolVersions.adoc$"],
       "datasourceTemplate": "custom.tool-{{depName}}",
       "matchStrings": [
-        "\\s*(?<depName>.*)\\n\\s*(?<currentValue>.*)"
+        "\\s*(?<nameoftool>.*)\\n\\s*(?<currentValue>.*)"
       ],
       "packageNameTemplate": "releases-2",
+      "depNameTemplate": "<<nameoftool>> ",
       "extractVersionTemplate": "(?<version>appVersion: (?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+))$"
     }
   ],
