--- a/renovate.json
+++ b/renovate.json
@@ -10,12 +10,14 @@
       "matchDatasources": ["custom.tool-GitVersioning", "custom.tool-testtool"],
       "matchDepPatterns": [".*"],
       "groupName": "Tools-1",
+      "matchDepNames": ["idontwantthistoshowup"],
       "additionalBranchPrefix": "tools-1",
       "versioning": "regex:appVersion: (?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)"
     },
     {
       "versioning": "regex:appVersion: (?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)",
       "additionalBranchPrefix": "tools-2",
+      "matchDepNames": ["idontwantthistoshowup2"],
       "matchPackagePatterns": ["releases"],
       "groupName": "Tools-2"
     }
@@ -59,7 +61,7 @@
         "\\s*(?<nameoftool>.*)\\n\\s*(?<currentValue>.*)"
       ],
       "packageNameTemplate": "releases-2",
-      "depNameTemplate": "{{nameoftool}}",
+      "depNameTemplate": "idontwantthistoshowup",
       "extractVersionTemplate": "(?<version>appVersion: (?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+))$"
     },
        {
@@ -67,10 +69,10 @@
       "fileMatch": ["toolVersions.adoc$"],
       "datasourceTemplate": "custom.tool-{{depName}}",
       "matchStrings": [
-        "\\s*(?<nameoftool>.*)\\n\\s*(?<currentValue>.*)"
+        "\\s*(?<depName>.*)\\n\\s*(?<currentValue>.*)"
       ],
       "packageNameTemplate": "releases-2",
-      "depNameTemplate": "{{nameoftool}} ",
+      "depNameTemplate": "Idontwantthistoshowup2",
       "extractVersionTemplate": "(?<version>appVersion: (?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+))$"
     }
   ],
